@@ -1,16 +1,14 @@
 public class WrapperClass {
 	
 	public static void main(String[] args) {
-		
 		int value = 5;
-		integer = new Integer(value);
+		Integer integer = Integer.valueOf(value);
 		Integer intergerTwo = value;
 
-		System.out.println(value + "," + integer + "," + intergerTwo);
-
 		if (value == intergerTwo) {
-			println("value is same");
+			System.out.println("Value is same");
 		}
+		System.out.println(value + "," + integer + "," + intergerTwo);
 	}
 
 }
